#	subdirectories.  The pm program just holds command line 
#	processing and initialization code.  All the actual work is 
#	the new pm_classes module.  There is also a new pm_utils 
#	module that holds a few things like error handling and logging
#	that are usefull to all modules.  Finally, all the old man
#	pages have been removed in favor of just the pm.1 and 
#	powerman.conf.5 pages.
#                  Forthermore, the I/O to icebox units has been 
#	reimplemented using os.read/write.  All such I/O is now mediated
#       by a single "prompt" command.  The signal handling for the
#	alarm is with the prompt command and both are in the pm_utils
#       module.   Other minor changes and bug fixes.
#
# v. 0-2-0: 
#	2001-10-4
#	           Added a random 0.25 to 1.0 second back off in 
#	attempt to acquire lock on tty in icebox, with 60 retries before
#	failure.  This is in support of conman's spawning of n parallel
#	threads to invoke powerman one node at a time for resets.
#	Also removed any delay in querying mode and set delays back to 
#	0.3 seconds per port or 3.5 seconds per icebox.
#
#       2001-10-6
#	          icebox locking had an incrrect reference to "locked"
#	rather than self.locked in the tty class method "do_command".
#	The comm == 'temp' case was misshandled in pm.  The "message"
#	for temperature checking a single node had a syntax error.
#
#	2001-10-08
#	          Added the '-R' option to reset power control hardware.
#	Applicable to iceboxes only at this point.
#	The "working collective" environment variable is "WCOLL".  
#	I had previously been looking for "W_COL".
#
#	2001-10-09
#	          Revert to line buffered I/O.  As per Linux Networks   
#	suggestion that line noise may corrupt the icebox buffer always  
#	start a query with an initial '\r\n' to clear the buffer first.
#	Push tty openning and locking code into pm_utils.
#	
####################################################################